@@ -136,8 +136,8 @@ public class Effect{
     }
 
     public static void create(Effect effect, float x, float y, float rotation, Color color, Object data){
-        if(headless || effect == Fx.none) return;
-        if(Core.settings.getBool("effects") && UnitType.alpha != 0 && !Client.hidingBlocks){
+        if(headless || effect == Fx.none || UnitType.alpha == 0 || Client.hidingBlocks) return;
+        if(Core.settings.getBool("effects")){
             Rect view = Core.camera.bounds(Tmp.r1);
             Rect pos = Tmp.r2.setSize(effect.clip).setCenter(x, y);
 
